[package]
name = "inc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_derive = "1.0"