[package]
name = "inc"
version = "0.1.0"
edition = "2021"

[lib]
name = "deep_inc"
crate-type = ["cdylib"]


[dependencies]
futures = "0.3"
tokio = { version = "1.37.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_derive = "1.0"
tch = { version = "0.16.0", features = ["python-extension"], git = "https://github.com/asu-gkg/tch-rs.git" }
rand = "0.8.5"
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
derive_more = "0.99"
etcd-client = "0.12.4"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
lazy_static = "1.4"


[dependencies.pyo3-tch]
git = "https://github.com/asu-gkg/tch-rs.git"
